Bug 285163 - Stray ampersand in Dolphin location bar, "file" protocol
Summary: Stray ampersand in Dolphin location bar, "file" protocol
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.7
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
: 286808 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-10-28 10:05 UTC by Timothy Pederick
Modified: 2011-11-16 23:36 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Proposed patch (1.75 KB, patch)
2011-10-28 14:14 UTC, Christoph Feck
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Timothy Pederick 2011-10-28 10:05:00 UTC
Version:           1.7 (using KDE 4.7.2) 
OS:                Linux

The "file" protocol in Dolphin's location bar appears as "fi&le". I can't find the relevant source or translation file, but I expect there's a double ampersand instead of a single somewhere.

Reproducible: Always

Steps to Reproduce:
1. Edit the Location bar (click it, Ctrl+L, F6, etc.)
2. Delete current contents.

Actual Results:  
The protocol drop-down menu appears to the left of the location bar, with the offending "fi&le" label visible.

Expected Results:  
The label should say "file", with an underline beneath the "l" to indicate a shortcut.

OS: Linux (x86_64) release 3.0.0-12-generic
Compiler: gcc
Distro: Kubuntu 11.10
Comment 1 Christoph Feck 2011-10-28 14:14:38 UTC
Created attachment 64982 [details]
Proposed patch
Comment 2 Christoph Feck 2011-10-28 14:17:29 UTC
The patch accidentally includes a (local) change for kfilewidget, that is not part of the proposed fix.
Comment 3 Christoph Feck 2011-11-04 08:00:47 UTC
Git commit 3a623c36bc3015a82011fd91cb12ebb22e82c3b4 by Christoph Feck.
Committed on 04/11/2011 at 08:54.
Pushed by cfeck into branch 'KDE/4.7'.

Fix stray ampersand

BUG: 285163
REVIEW: 103040

M  +7    -2    kfile/kurlnavigatorprotocolcombo.cpp

http://commits.kde.org/kdelibs/3a623c36bc3015a82011fd91cb12ebb22e82c3b4
Comment 4 Christoph Feck 2011-11-16 23:36:51 UTC
*** Bug 286808 has been marked as a duplicate of this bug. ***