Fix stray ampersand

BUG: 285163
REVIEW: 103040